# ResourceBundle

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  setup.py
.github/workflows/: build.yaml
ResourceBundle/: __init__.py  exceptions.py
ResourceBundle/BundleTypes/: BasicResourceBundle.py  ListResourceBundle.py  RawResourceBundle.py
ResourceBundle/simple/: RescourceBundle.py  ResourceBundle.py
ResourceBundle/util/: Locale.py  readers.py
